# self-instruct

./: CITATION.cff  README.md  requirements.txt
results/: Annotation.xlsx  RaterGuide.md  agreement.py  fischer.ipynb  jsonl_to_md.py  pyproject.toml  venn.py
results/HG/: HG102.md  HG103.md  HG106.md  HG108.md  HG110.md  HG112.md  HG113.md  HG117.md  HG119.md  HG12.md  HG122.md  HG127.md  HG130.md  HG134.md  HG135.md  HG136.md  HG138.md  HG139.md  HG14.md  HG143.md  HG146.md  HG147.md  HG149.md  HG151.md  HG156.md  HG158.md  HG16.md  HG163.md  HG165.md  HG167.md  HG17.md  HG173.md  HG174.md  HG18.md  HG183.md  HG189.md  HG19.md  HG191.md  HG193.md  HG194.md  (+80 more)
results/HQFS/: HQFS1.md  HQFS10.md  HQFS100.md  HQFS101.md  HQFS104.md  HQFS105.md  HQFS107.md  HQFS109.md  HQFS11.md  HQFS111.md  HQFS114.md  HQFS115.md  HQFS116.md  HQFS118.md  HQFS120.md  HQFS121.md  HQFS123.md  HQFS124.md  HQFS125.md  HQFS126.md  HQFS128.md  HQFS129.md  HQFS13.md  HQFS131.md  HQFS132.md  HQFS133.md  HQFS137.md  HQFS140.md  HQFS141.md  HQFS142.md  HQFS144.md  HQFS145.md  HQFS148.md  HQFS15.md  HQFS150.md  HQFS152.md  HQFS153.md  HQFS154.md  HQFS155.md  HQFS157.md  (+126 more)
results/MG/: MG100.md  MG104.md  MG106.md  MG107.md  MG108.md  MG114.md  MG115.md  MG118.md  MG119.md  MG121.md  MG122.md  MG127.md  MG128.md  MG129.md  MG130.md  MG133.md  MG135.md  MG139.md  MG14.md  MG145.md  MG148.md  MG149.md  MG15.md  MG152.md  MG153.md  MG156.md  MG157.md  MG160.md  MG161.md  MG163.md  MG164.md  MG166.md  MG167.md  MG17.md  MG170.md  MG171.md  MG176.md  MG177.md  MG179.md  MG180.md  (+90 more)
results/MQFS/: MQFS1.md  (+155 more)
(+134 files in other folders)
